tests/specs/ecosystem/std/archive/0_204_0.test
std/archive/0.204.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.204.0": "jsr:@std/internal@0.204.0"
    },
    "jsr": {
      "@std/internal@0.204.0": {
        "integrity": "e5df9728133b6f449211343c34d877c2cd6968f940cddf0b522872398179f6a7"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

error: Type checking failed.

